--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,4 +1,6 @@
-// COLORS
+// variables for css tags
+
+// COLORS 
 $color-primary: #0072bc;
 $color-primary-light: #d6e9f5;
 $color-primary-light-2: #e6f5ff;
