--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,3 +1,5 @@
+// css for Text and typography
+
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Saira:wght@600&display=swap");
 body {
   font-family: "DM Sans", sans-serif;
