--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -53,6 +53,7 @@ body {
   &__body{
     position: relative;
     width: calc(100vw - 10rem);
+    height: 100vh;
     padding: 1.5rem 2.5rem;
   }
 
