--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -52,3 +52,46 @@
   }
 }
 
+
+
+.toggle{
+  left: 100%;
+  transform: translate(-100%,0);
+  position: relative;
+  width: 4rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  overflow: hidden;
+}
+.toggle span{
+  position: absolute;
+  width: 2rem;
+  height: .25rem;
+  border-radius: 4px;
+  background-color: #1863ff;
+  transition: 0.5s;
+}
+.toggle span:nth-child(1){
+  transform: translateY(-8px);
+  width: 2.5rem;
+  left: 5px;
+}
+.toggle.active span:nth-child(1){
+  transform: translateY(0) rotate(45deg);
+  width: 4rem;
+}
+.toggle span:nth-child(2){
+  transform: translateY(8px);
+  width: 2.5rem;
+  left: 4px;
+}
+.toggle.active span:nth-child(2){
+  transform: translateY(0) rotate(315deg);
+  width: 4rem;
+}
+.toggle.active span:nth-child(3){
+  transform: translateX(-60px);
+}
