--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -47,7 +47,7 @@
     height: 6rem;
       white-space: nowrap;
       margin: 1rem 0;
-      padding: 0.9rem 1.8rem;
+      // padding: 0.9rem 1.8rem;
       transition: color, transform 0.45s ease-in-out;
 
       
@@ -105,13 +105,21 @@
     &--elements,
     &--btn {
       color: inherit;
-      display: flex;
-      text-decoration: none;
-      flex-wrap: nowrap;
-      align-items: center;
-      width: fit-content;
-      cursor: pointer;
-      justify-content: center;
+    display: flex;
+    text-decoration: none;
+    flex-wrap: nowrap;
+    align-items: center;
+    width: -moz-fit-content;
+    width: 100%;
+    padding: 0.9rem 1.8rem;
+    height: 100%;
+    cursor: pointer;
+    justify-content: flex-start;
+    &.active{
+      border-radius: 10px;
+  background: #f1f0fb;
+  box-shadow: inset 5px 5px 10px #cdccd5, inset -5px -5px 10px #ffffff;
+}
       
       &#Collapse svg{
         transition: .5s;
@@ -122,6 +130,8 @@
         transform:rotate(180deg);
       }
     }
+
+  
 
   }
 
