--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -46,7 +46,7 @@
     width: 6rem;
     height: 6rem;
       white-space: nowrap;
-      margin: 1rem 0;
+      margin: .5rem 0;
       // padding: 0.9rem 1.8rem;
       transition: color, transform 0.45s ease-in-out;
 
@@ -59,15 +59,15 @@
         }
       
 
-        &:last-child {        
-          position: absolute;
-          bottom: .5rem;
-          width: fit-content!important;
-          // background-color: red;
-          color: $color-primary;   
-          left: 50%;
-          transform: translate(-50%,0);     
-      }
+      //   &:last-child {        
+      //     position: absolute;
+      //     bottom: .5rem;
+      //     width: fit-content!important;
+      //     // background-color: red;
+      //     color: $color-primary;   
+      //     left: 50%;
+      //     transform: translate(-50%,0);     
+      // }
 
       svg {
         fill: $color-primary;
