--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -20,7 +20,7 @@
 .logo-hide{
   transition: .8s;
 }
-  h1.logo-hide[hide],.logo-hide[hide] span{
+h1.logo-hide[hide],.logo-hide[hide] h3,.logo-hide[hide] span{
     // font-size:0;
     transform: translateX(20rem);
     
@@ -35,6 +35,8 @@
     }
     
   }
+
+  
   
   &__logo{
     // text-shadow:-6px 6px 15px rgba(0,0,0,0.5),                6px -6px 15px rgba(255,255,255,0.8);
@@ -56,15 +58,15 @@
     flex-wrap: nowrap;
     padding:.9rem .5rem ;
     gap: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
     color: $color-primary;  
     
     // letter-spacing: -2.5px;
     text-transform: uppercase;
     img{
         transition: all 0.5s;  
-        width: 2.2rem;
-        height: 2.2rem;
+        width: 3rem;
+        height: 3rem;
       }
     }
     
@@ -90,11 +92,54 @@
   }
 
   
+&__bottom{
+  display: flex;
+    justify-content: space-between;
+    position: absolute;
+    margin: 1rem 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 0.5rem 1.5rem;
+    align-items: center;
+    align-content: center;
 
-  @include respond(tab-port) {
-    top: 8rem;
-    position: fixed;
-    width: 0rem;
+  &--divider{
+      background-color: #cccccc;
+      width: .2rem;
+      height: 1.5rem;
+      margin: 0 .5rem;
+  }
+  
+
+}
+  &__user,&__setting{
+display: flex;
+justify-content: center;
+gap:.5rem;
+align-items: center;
+
+
+&--pic{
+  font-size: 1.5rem;
+  height: 2.2rem;
+  width:  2.2rem;
+  color: #f1f0fb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  padding:.5rem;
+  border-radius: 50%;
+  background-color: #0072bc;
+}
+
+
+
+    span {
+      font-size: 1.5rem;
+      width: max-content;
+    }
   }
 }
 // a.sidebar__logo-box {
