--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -44,6 +44,7 @@
     border-radius: 8px;
     padding: 0.5rem;
     margin-bottom: 1rem;
+    user-select: none;
   }
 
   &__logo {
@@ -122,22 +123,36 @@
     }
     span {
       margin-left: 1rem;
-      font-size: 2rem;
+      font-size: 1.8rem;
     }
   }
 
   &__user {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     margin-top: 1.5rem;
     align-items: center;
     gap: 0.5rem;
+    cursor: pointer;
 
+    span{
+      padding: .5rem;
+      border-radius: 6px;
+      box-shadow: 2px 2px 4px #cdccd5;
+
+      &:active {
+        box-shadow: inset 2px 2px 4px #cdccd5,inset -2px -2px 4px #ffffff;
+      & ~ .sidebar__user--pic{
+        box-shadow: -1px -1px 3px 3px #cdccd5, 2px 2px 3px 3px #ffffff, inset -1px -1px 1px #00000048, inset 1px 1px 1px #0099ff;
+        }
+      }
+    }
+      
     &--pic {
       font-size: 2.5rem;
-      height: 4.5rem;
-      width: 4.5rem;
+      height: 4rem;
+      width: 4rem;
       color: #f1f0fb;
       display: flex;
       align-items: center;
@@ -146,7 +161,17 @@
       padding: 0.5rem;
       border-radius: 50%;
       background-color: #0072bc;
-      transition: all .5s;
+      // transition: all .2s;
+      box-shadow: 1px 1px 2px 2px #cdccd5, -1px -1px 3px 3px #ffffff;
+
+      &:active{
+        box-shadow: -1px -1px 3px 3px #cdccd5, 2px 2px 3px 3px #ffffff, inset -1px -1px 1px #00000048, inset 1px 1px 1px #0099ff;
+      }
+
+      pic{
+        user-select: none;
+      }
+
     }
 
     &[hide] .sidebar__user--pic {
@@ -156,7 +181,7 @@
     }
 
     span {
-      font-size: 2rem;
+      font-size: 1.8rem;
       width: max-content;
     }
   }
