--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -161,7 +161,7 @@
       padding: 0.5rem;
       border-radius: 50%;
       background-color: #0072bc;
-      // transition: all .2s;
+      transition: font-size .5s;
       box-shadow: 1px 1px 2px 2px #cdccd5, -1px -1px 3px 3px #ffffff;
 
       &:active{
