--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -74,7 +74,10 @@
 
       &.active {
         color: $color-primary;
-        box-shadow: inset 5px 5px 10px #cdccd5, inset -5px -5px 10px #ffffff;
+        box-shadow: inset 0.2rem 0.2rem 0.5rem rgba(195, 193, 198, 0.9),
+          inset -0.2rem -0.2rem 0.5rem #fff,
+          0.3rem 0.3rem 0.5rem rgba(195, 193, 198, 0.9),
+          -0.2rem -0.2rem 0.4rem #fff;
       }
 
       &:hover {
@@ -84,7 +87,11 @@
       }
 
       &:active {
-        box-shadow: inset 5px 5px 10px #cdccd5, inset -5px -5px 10px #ffffff;
+        // box-shadow: inset 5px 5px 10px #cdccd5, inset -5px -5px 10px #ffffff;
+        box-shadow: inset 0.2rem 0.2rem 0.5rem rgb(195 193 198 / 90%),
+          inset -0.2rem -0.2rem 0.5rem #fff,
+          0.3rem 0.3rem 0.5rem rgb(195 193 198 / 90%),
+          -0.2rem -0.2rem 0.4rem #fff;
       }
 
       &#Collapse svg {
@@ -98,7 +105,7 @@
     }
   }
 
-  [nav-collapse="1"] {
+  [nav-collapse='1'] {
     display: block;
 
     svg {
