--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -11,7 +11,8 @@
   z-index: 2;
   border-radius: 10px;
   background: #f1f0fb;
-  box-shadow: 2px 2px 12px #cccccc, -1px -1px 12px #ddd9d9;
+  box-shadow: -0.3rem -0.3rem 0.5rem rgba(195, 193, 198, 0.9),
+    0.2rem 0.2rem 0.4rem #fff;
   overflow-x: hidden;
   transition: all 0.5s;
   position: fixed;
@@ -41,8 +42,7 @@
 
   &__logo-box {
     display: block;
-    box-shadow: 1px 1px 4px #cdccd5, -2px -2px 0px #faf9f9;
-    border-radius: 8px;
+
     padding: 0.5rem;
     margin-bottom: 1rem;
     user-select: none;
@@ -80,8 +80,11 @@
 
   .line {
     height: 1px;
-    background-color: #e3e3e3;
-    margin: 1rem 0;
+    background-color: #f1f0fb;
+    margin: 1rem 0 2rem;
+    box-shadow: inset 0.2rem 0.2rem 0.5rem #fff,
+      inset -0.2rem -0.2rem 0.5rem rgb(195 193 198 / 90%),
+      0.3rem 0.3rem 0.5rem rgb(195 193 198 / 90%), -0.2rem -0.2rem 0.4rem #fff;
   }
 
   &__bottom {
@@ -130,75 +133,59 @@
 
   &__user {
     display: flex;
-    flex-direction: column-reverse;
     justify-content: center;
     margin-top: 1.5rem;
     align-items: center;
-    gap: 0.5rem;
-    cursor: pointer;
+    gap: 0.1rem;
 
-    span {
+    &--name {
       padding: 0.5rem;
-      border-radius: 6px;
-      box-shadow: 2px 2px 4px #cdccd5;
-
-      &:active {
-        box-shadow: inset 2px 2px 4px #cdccd5, inset -2px -2px 4px #ffffff;
-        & ~ .sidebar__user--pic {
-          box-shadow: -1px -1px 3px 3px #cdccd5, 2px 2px 3px 3px #ffffff,
-            inset -1px -1px 1px #00000048, inset 1px 1px 1px #0099ff;
-        }
-      }
+      display: flex;
+      flex-direction: column;
     }
 
     &--pic {
-      font-size: 2.5rem;
-      height: 4rem;
-      width: 4rem;
-      color: #f1f0fb;
-      display: flex;
+      font-size: 2rem;
       align-items: center;
       justify-content: center;
       font-weight: 700;
+      display: flex;
       padding: 0.5rem;
-      border-radius: 50%;
-      background-color: #0072bc;
       transition: font-size 0.5s;
-      box-shadow: 1px 1px 2px 2px #cdccd5, -1px -1px 3px 3px #ffffff;
-
-      &:active {
-        box-shadow: -1px -1px 3px 3px #cdccd5, 2px 2px 3px 3px #ffffff,
-          inset -1px -1px 1px #00000048, inset 1px 1px 1px #0099ff;
-      }
-
-      pic {
-        user-select: none;
-      }
     }
 
-    &[hide] .sidebar__user--pic {
-      font-size: 2rem;
-      height: 3rem;
-      width: 3rem;
+    &[hide] .sidebar__user--name {
+      transform: translateX(20rem);
+      position: absolute;
+      height: 0;
     }
 
-    span {
+    &--name {
       font-size: 1.8rem;
       width: max-content;
+    }
+    &--user-position {
+      font-size: 1.2rem;
     }
   }
 }
 
 .toggle {
-  left: 50%;
+  z-index: 99;
+  left: 9rem;
+  top: 40px;
   transform: translate(-50%, 0);
   position: relative;
   width: 4rem;
-  height: 2rem;
+  height: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 2rem 0;
+  box-shadow: 4px -1px 8px #cdccd5;
+  border-radius: 50%;
+  background: #f1f0fb;
+  transition: all 0.5s;
 }
 .toggle span {
   position: absolute;
@@ -214,15 +201,14 @@
 }
 .toggle.active {
   margin: 1rem 0;
-  left: 95%;
-  top: 2px;
+  left: 24rem;
   position: absolute;
   transform: translateX(-100%);
 }
 .toggle.active span:nth-child(1) {
   transform: translateY(0) rotate(45deg);
   width: 2rem;
-  left: 18px;
+  left: 10px;
 }
 .toggle span:nth-child(2) {
   transform: translateY(8px);
@@ -231,7 +217,7 @@
 .toggle.active span:nth-child(2) {
   transform: translateY(0) rotate(315deg);
   width: 2rem;
-  left: 18px;
+  left: 10px;
 }
 
 .toggle span:nth-child(3) {
