--- a/src/sass/components/_job.scss
+++ b/src/sass/components/_job.scss
@@ -21,6 +21,9 @@
   border-radius: 10px;
   background: #f1f0fb;
   box-shadow: 2px 2px 12px #cccccc, -1px -1px 12px #ddd9d9;
+  // box-shadow: inset 0.2rem 0.2rem 0.5rem #fff,
+  //   inset -0.2rem -0.2rem 0.5rem rgba(195, 193, 198, 0.9),
+  //   0.3rem 0.3rem 0.5rem rgba(195, 193, 198, 0.9), -0.2rem -0.2rem 0.4rem #fff;
   overflow-x: hidden;
   transition: all 0.5s;
 
