border switched sidebar

--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -12,8 +12,8 @@
   border-radius: 10px;
   background: #f1f0fb;
 
-  box-shadow: -0.3rem -0.3rem 0.5rem rgba(195, 193, 198, 0.9),
-    0.2rem 0.2rem 0.4rem #fff;
+  box-shadow: -0.2rem -0.2rem 0.4rem rgba(255, 255, 255, 0.9),
+    0.3rem 0.3rem 0.5rem rgba(195, 193, 198, 0.9);
   overflow-x: hidden;
   transition: all 0.5s;
   position: fixed;
