glow and progress bar

--- a/src/sass/base/_animation.scss
+++ b/src/sass/base/_animation.scss
@@ -108,3 +108,30 @@
     transition: all 0.5s;
   }
 }
+
+@keyframes glowRED {
+  0% {
+    filter: drop-shadow(0px 0px 0px #fde3ee) drop-shadow(0px 0px 0.5px #fdd3e5)
+      drop-shadow(0px 0px 0.8px #ff80b3) drop-shadow(0px 0px 1.25px #ff4d94)
+      drop-shadow(0px 0px 1.5px #ff0066);
+  }
+
+  100% {
+    filter: drop-shadow(0px 0px 0.5px #fde3ee) drop-shadow(0px 0px 1px #fdd3e5)
+      drop-shadow(0px 0px 2px #ff80b3) drop-shadow(0px 0px 2.5px #ff4d94)
+      drop-shadow(0px 0px 3px #ff0066);
+  }
+}
+@keyframes glowGreen {
+  0% {
+    filter: drop-shadow(0px 0px 0px #e3fded) drop-shadow(0px 0px 0.5px #d3fdee)
+      drop-shadow(0px 0px 0.8px #80ffc6) drop-shadow(0px 0px 1.25px #4dffa0)
+      drop-shadow(0px 0px 1.5px #04aa6d);
+  }
+
+  100% {
+    filter: drop-shadow(0px 0px 0.5px #e3fded) drop-shadow(0px 0px 1px #d3fdee)
+      drop-shadow(0px 0px 2px #80ffc6) drop-shadow(0px 0px 2.5px #4dffa0)
+      drop-shadow(0px 0px 3px #04aa6d);
+  }
+}
