--- a/src/sass/components/_job.scss
+++ b/src/sass/components/_job.scss
@@ -18,11 +18,11 @@
   // background-color: $color-grey-light;
   padding: 1.5rem 0rem;
   // border: 1px solid #e4e4e4;
-  border-radius: 10px;
-  background: #f1f0fb;
-  box-shadow: 2px 2px 12px #cccccc, -1px -1px 12px #ddd9d9;
-  box-shadow: -0.2rem -0.2rem 0.5rem rgba(216, 216, 216, 0.9),
-    0.3rem 0.3rem 0.5rem rgba(195, 193, 198, 0.9);
+  // border-radius: 10px;
+  // background: #f1f0fb;
+  // box-shadow: 2px 2px 12px #cccccc, -1px -1px 12px #ddd9d9;
+  // box-shadow: -0.2rem -0.2rem 0.5rem rgba(216, 216, 216, 0.9),
+  //   0.3rem 0.3rem 0.5rem rgba(195, 193, 198, 0.9);
   overflow-x: hidden;
   transition: all 0.5s;
 
@@ -30,14 +30,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 2rem;
+    padding: 0;
+    margin-bottom: 2.6rem;
 
     h3 {
       left: 0;
       display: inline-block;
-      padding: 0.4rem 0.8rem;
+      padding: 0.4rem 0rem;
       border-radius: 4px;
-      // color: #fff;
       text-transform: uppercase;
       font-weight: 700;
     }
@@ -48,28 +48,49 @@
   }
   &__status-list {
     grid-row-gap: 1.2rem;
+    box-shadow: inset 0.2rem 0.2rem 0.5rem #fff,
+      inset -0.2rem -0.2rem 0.5rem rgb(195 193 198 / 90%),
+      0.3rem 0.3rem 0.5rem rgb(195 193 198 / 90%), -0.2rem -0.2rem 0.4rem #fff;
+    justify-items: stretch;
     border-radius: 8px;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1.5fr;
     justify-items: center;
+    padding: 1rem;
     min-height: 8.7rem;
-    padding: 1.6rem;
-    position: relative;
-    margin-top: 1.6rem;
-    row-gap: 1.2rem;
-    // border-radius: 10px;
-    // background: #f1f0fb;
-    // box-shadow: 4px 4px 5px #cdccd5, -5px -5px 10px #ffffff;
+    margin: 1.6rem 0;
 
-    &:not(:last-of-type):after {
-      content: '';
-      width: 92%;
-      height: 2px;
-      margin: 0px 4%;
-      position: absolute;
-      background: #e3e3e3;
-      bottom: -8px;
+    position: relative;
+    gap: 1.2rem;
+
+    &:not(:first-of-type) {
+      margin-top: 2.6rem;
+    }
+    &:first-of-type {
+      margin-top: 0rem;
+    }
+
+    // &:not(:last-of-type):after {
+    //   content: '';
+    //   width: 92%;
+    //   height: 2px;
+    //   margin: 0px 4%;
+    //   position: absolute;
+    //   background: #e3e3e3;
+    //   bottom: -8px;
+    // }
+    &--priority[tool='false'] {
+      fill: #fff;
+      width: 3rem;
+      height: 3rem;
+      animation: glowRED 1s ease-in-out infinite alternate;
+    }
+    &--priority[tool='true'] {
+      fill: #fff;
+      width: 3rem;
+      height: 3rem;
+      animation: glowGreen 1s ease-in-out infinite alternate;
     }
 
     &--priority,
@@ -89,27 +110,36 @@
     }
 
     &--delete-info {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      justify-content: end;
+      justify-items: end;
+      gap: 2.5px;
+      align-items: center;
+      cursor: pointer;
+
+      svg:nth-child(even) {
+        justify-self: start;
+      }
     }
 
-    &--delete,
-    &--info {
-      display: none;
-    }
+    // &--delete,
+    // &--info {
+    //   display: none;
+    // }
 
-    &:hover &--delete,
-    &:hover &--info {
-      display: block;
-    }
+    // &:hover &--delete,
+    // &:hover &--info {
+    //   display: block;
+    // }
 
     &--to-do,
     &--progress,
     &--done {
-      margin-bottom: 1rem;
-      max-height: calc(100% - 5rem);
+      max-height: calc(100% - 5.4rem);
       overflow-y: auto;
+      padding-right: 0.5rem;
     }
 
     &--to-do {
@@ -117,11 +147,14 @@
 
       .job__status-list {
         cursor: move;
-        justify-items: stretch;
         grid-template-columns: 1fr 1fr 1fr !important;
 
+        &--text {
+          justify-self: baseline;
+        }
+
         &--delete-info {
-          align-items: flex-end;
+          align-items: center;
         }
       }
     }
@@ -136,4 +169,32 @@
   &__status-add {
     margin-top: 2rem;
   }
+}
+
+#Progress_Status {
+  width: 50%;
+  background-color: #ddd;
+  border-radius: 15px;
+  position: relative;
+  height: 1.8rem;
+}
+
+#myprogressBar {
+  width: 1%;
+  height: 1.8rem;
+  border-radius: 15px;
+  background-color: #0072bc;
+  text-align: center;
+  position: absolute;
+}
+
+#myprogressText {
+  z-index: 4;
+  color: #ddd;
+  background: transparent;
+  position: relative;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  padding: 0 1rem;
+  // text-align: center;
 }
